<resources>
    <string name="app_name">LinearAndRelativeLayout</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
</resources>
