<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/tv_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:layout_below="@id/tv_login_header"
        android:layout_alignBottom="@+id/txt_username"
        android:layout_alignParentLeft="true"/>

    <EditText android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_header"
        android:layout_toRightOf="@id/tv_username"
        android:layout_alignParentRight="true"/>

    <TextView android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:gravity="center"
        android:layout_below="@id/tv_username"
        android:layout_alignBottom="@+id/txt_password"
        android:layout_alignParentLeft="true" />

    <EditText android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_password"
        android:layout_below="@id/txt_username"
        android:layout_alignParentRight="true"/>

    <Button android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@id/txt_password"
        android:layout_centerHorizontal="true"/>

    <Button android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>